# llvm-project

mlir/: matmul.mlir
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/SCF/: Passes.h  (+2 more)
mlir/include/mlir/IR/: Builders.h  OperationSupport.h
mlir/lib/Analysis/: AffineAnalysis.cpp  AffineStructures.cpp  CMakeLists.txt  LoopAnalysis.cpp  NestedMatcher.cpp  SliceAnalysis.cpp  Utils.cpp
mlir/lib/Conversion/: PassDetail.h
mlir/lib/Conversion/AffineToStandard/: AffineToStandard.cpp  CMakeLists.txt
mlir/lib/Conversion/LoopsToGPU/: CMakeLists.txt  LoopsToGPU.cpp  LoopsToGPUPass.cpp
mlir/lib/Conversion/SCFToOpenMP/: SCFToOpenMP.cpp
mlir/lib/Conversion/VectorToLoops/: ConvertVectorToLoops.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Affine/: AffineOps.cpp  AffineValueMap.cpp  CMakeLists.txt
mlir/lib/Dialect/Affine/EDSC/: Builders.cpp
mlir/lib/Dialect/LoopOps/: LoopOps.cpp
mlir/lib/Dialect/SCF/: SCF.cpp
mlir/lib/Dialect/VectorOps/: CMakeLists.txt  VectorTransforms.cpp  VectorUtils.cpp
mlir/lib/IR/: MLIRContext.cpp  OperationSupport.cpp
mlir/lib/Transforms/: AffineDataCopyGeneration.cpp  AffineLoopInvariantCodeMotion.cpp  BufferPlacement.cpp  CMakeLists.txt  LoopFusion.cpp  LoopTiling.cpp  LoopUnroll.cpp  LoopUnrollAndJam.cpp  MemRefDataFlowOpt.cpp  PipelineDataTransfer.cpp  Vectorize.cpp
mlir/lib/Transforms/Utils/: CMakeLists.txt  LoopFusionUtils.cpp  LoopUtils.cpp  Utils.cpp
mlir/test/EDSC/: CMakeLists.txt  builder-api-test.cpp
(+30 files in other folders)
